<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_photos" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/esteemator"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="esteemator" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/informacion">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
