<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formItem8"
            android:textColor="#000000"/>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint=""
                android:backgroundTint="@color/cardview_dark_background"
                android:id="@+id/txtuno"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formItem9"
            android:textColor="#000000"/>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint=""
                android:backgroundTint="@color/cardview_dark_background"
                android:id="@+id/txtdos"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_gravity="center_horizontal"
                android:text="@string/btncalcular"
                android:id="@+id/btncalcular"
                android:background="#ed79b979"
                android:textSize="20dp"
                android:onClick="onClickFormulatres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pruebas"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sales"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resultado1"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15dp"
                android:fontFamily="sans-serif-medium"
                android:layout_weight="1"
                android:text="@string/menoscosto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resultado2"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/margenbruto"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resultado3"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15dp"
                android:fontFamily="sans-serif-medium"
                android:layout_weight="1"
                android:text="@string/menosgastosoperacion"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resultado4"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/utilidadneta"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="15dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/resultado5"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>